Fix masthead heading to overflow hidden added viewport meta tag for media devices

--- a/src/components/container.css
+++ b/src/components/container.css
@@ -1,3 +1,6 @@
+* {
+}
+
 html {
     scroll-behavior: smooth;
 }
@@ -22,4 +25,3 @@ h1, h2, h3, h4, h5, h6 {
     margin-top: 0;
     margin-bottom: 0.5rem;
 }
-
