--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,6 +1,6 @@
 .masthead{
-    padding-top: 17rem;
-    padding-bottom: 11rem;
+    padding-top: 10.5rem;
+    padding-bottom: 6rem;
     background-image: url('../../asset/mastheadBackground.jpg');
     background-repeat: no-repeat;
     background-position: center;
@@ -22,4 +22,11 @@
     font-weight: 700;
     margin-bottom: 4rem;
     font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
+
+@media (min-width: 768px) {
+  .masthead {
+    padding-top: 17rem;
+    padding-bottom: 11rem;
+  }
 }
